--- a/components/post-card/post-card__big/post-card__big.scss
+++ b/components/post-card/post-card__big/post-card__big.scss
@@ -2,7 +2,7 @@
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     gap: var(--grid-gap);
-    gap: 0;
+    // gap: 0;
     position: relative;
     height: fit-content;
     overflow: hidden;
@@ -26,7 +26,7 @@
     position: relative;
     z-index: 10;
     // padding: 20px;
-    padding: 0 0 0 var(--padding);
+    // padding: 0 0 0 var(--padding);
     gap: 2rem;
     // gap: 1rem;
     // background-color: var(--color-background-card);
