--- a/blocks/contacts/_index.scss
+++ b/blocks/contacts/_index.scss
@@ -1,8 +1,5 @@
 .contacts-block {
     padding: 2.5rem var(--padding);
-    // border-top: 1px solid var(--color-gray-dark);
-    // margin-top: 10rem;
-    gap: 0
 }
 
 .contacts-block__top {
@@ -27,8 +24,6 @@
 .contacts-block__image {
     grid-column: 9/13;
     grid-row: 1/4;
-
-    padding-left: var(--padding);
 }
 
 .contacts-block__image__source {
@@ -87,36 +82,31 @@
 //     }
 // }
 
-// @media screen and (max-width:1220px) {
-//     .contacts-block__description {
-//         grid-column: 1/8;
-//         padding-top: .5rem;
-//     }
-// }
+@media screen and (max-width: 1220px) {
+    .contacts-block__top {
+        grid-column: 1/8;
+    }
 
-// @media screen and (max-width:767px) {
+    .contacts-block__links {
+        grid-column: 1/8;
+    }
 
-//     .contacts-block {
-//         margin-top: 3rem;
-//     }
+    .contacts-block__image {
+        grid-column: 8/13;
+    }
+}
 
-//     .contacts-block__title {
-//         grid-row: 1/2;
-//     }
+@media screen and (max-width:767px) {
+    .contacts-block__top {
+        grid-column: 1/13;
+    }
 
-//     .contacts-block__image {
-//         padding-left: 0;
-//         grid-column: 1/13;
-//         grid-row: 2/3;
-//         grid-row: 1/2;
-//         grid-row: 3/4;
-//     }
+    .contacts-block__links {
+        grid-column: 1/13;
+    }
 
-//     .contacts-block__description {
-//         grid-column: 1/13;
-//         grid-row: 3/4;
-//         grid-row: 2/3;
-//         padding-bottom: 2rem;
-//     }
-
-// }
+    .contacts-block__image {
+        grid-column: 1/13;
+        grid-row: 4/5;
+    }
+}
