--- a/blocks/experience/_index.scss
+++ b/blocks/experience/_index.scss
@@ -33,10 +33,10 @@
 }
 
 .experience-item__img {
-    // border-radius: 100px;
+    border-radius: 100px;
     object-fit: cover;
-    width: 4.5rem;
-    height: 4.5rem;
+    width: 4rem;
+    height: 4rem;
     background-color: aliceblue;
 }
 
@@ -45,7 +45,7 @@
 .experience-item__company {
     font-size: var(--font-size-1);
     font-weight: var(--font-weight-regular);
-    margin-top: .5rem;
+    margin-top: .3rem;
 }
 
 .experience-item__position {
@@ -78,10 +78,6 @@
 }
 
 @media screen and (max-width: 1600px) {
-    // .experience-block__title {
-    //     grid-column: 1/5;
-    //     grid-row: 1/2;
-    // }
 
     // .experience-list {
     //     grid-column: 4/9;
@@ -90,25 +86,41 @@
 }
 
 @media screen and (max-width: 1220px) {
-    // .experience-block__title {
-    //     grid-column: 1/13;
-    // }
-
-    // .experience-list {
-    //     grid-column: 1/13;
-    //     grid-row: 2/3;
-    //     gap: 6rem;
-    // }
-
-    .experience-item {
-        flex-direction: column;
-        gap: 1rem;
+    .experience-block__description {
+        grid-column: 1/8;
     }
 
-    .experience-item__description {
-        width: 100%;
+    .experience-list {
+        grid-column: 1/8;
+    }
+
+    .experience-item {
+        // flex-direction: column;
+        // gap: 1rem;
     }
 
 }
 
-@media screen and (max-width: 767px) {}
+@media screen and (max-width: 767px) {
+    .experience-block__description {
+        grid-column: 1/13;
+    }
+
+    .experience-list {
+        grid-column: 1/13;
+        margin-top: 2rem;
+        gap: 4rem;
+    }
+
+    .experience-item {
+        // flex-direction: column;
+        gap: 1rem;
+    }
+    .experience-item__company{
+        margin-top: 0;
+    }
+    .experience-item__img {
+        width: 3.5rem;
+        height: 3.5rem;
+    }
+}
