--- a/blocks/values/_index.scss
+++ b/blocks/values/_index.scss
@@ -30,8 +30,23 @@
 
     margin-top: 5rem;
 }
-@media screen and (max-width: 767px) {
 
+@media screen and (max-width: 1220px) {
+    .values__title {
+        grid-column: 1/13;
+        grid-row: 1/2;
+    }
+
+    .values__description {
+        grid-column: 8/13;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .values__description {
+        grid-column: 1/13;
+        margin-top: 1rem;
+    }
     .values__title {
         padding-right: 1.5rem;
 
