--- a/blocks/section__post-list__big/_index.scss
+++ b/blocks/section__post-list__big/_index.scss
@@ -8,11 +8,11 @@
 
     .post-card__big {
         &:not(:first-child) {
-            padding-top: 3rem;
+            // padding-top: 3rem;
         }
 
         &:first-child {
-            border-top: 0;
+            // border-top: 0;
         }
     }
 
@@ -30,14 +30,17 @@
 .section__post-list__big__heading {
     padding: var(--padding);
     padding: 2.5rem var(--padding);
+    padding: 0;
 
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     z-index: 10;
-    display: none;
-    grid-column: 4/12;
+    grid-column: 3/12;
     grid-row: 1/2;
+}
+.section__post-list__big__title{
+
 }
 
 @media screen and (max-width: 1600px) {
