--- a/blocks/section__welcome-block/_index.scss
+++ b/blocks/section__welcome-block/_index.scss
@@ -2,6 +2,7 @@
     height: fit-content;
     min-height: 100vh;
     margin: 0;
+    position: relative;
 }
 
 .section__welcome-block__content {
@@ -14,11 +15,14 @@
     justify-content: center;
     align-items: start;
     height: 100%;
+
+    position: relative;
+    z-index: 5;
 }
 
 .welcome-block__text {
     * {
-        font-size: var(--font-size-5);
+        font-size: var(--font-size-3);
         line-height: 110%;
         font-weight: var(--font-weight-regular);
         font-weight: 400;
@@ -34,7 +38,20 @@
     font-weight: 400;
 }
 
+.welcome-block__image {
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    z-index: 0;
+    mask: linear-gradient(90deg, rgba(0, 0, 0, 0) 10.41138795045045%, rgba(0, 0, 0, 1) 93.1447072072072%) add;
+}
 
+.welcome-block__image__source {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    mask: linear-gradient(0deg, rgba(0, 0, 0, 0) 10.41138795045045%, rgba(0, 0, 0, 1) 93.1447072072072%) add;
+}
 
 @media screen and (max-width: 1600px) {
     .section__welcome-block__content {
