--- a/components/header/header.scss
+++ b/components/header/header.scss
@@ -179,13 +179,16 @@
 .header__page-nav {
     padding: 1.5rem var(--padding);
     position: fixed;
-    top: calc(3 * var(--padding));
+    // top: calc(3 * var(--padding));
     left: var(--padding);
+    top: 0;
+    bottom: 0;
+    margin: auto 0;
+    height: fit-content;
 
     display: flex;
     flex-direction: column;
-    // gap: 0.7rem 1rem;
-    gap: 1rem;
+    gap: .5rem;
     padding: 1rem 0;
 
     li {
@@ -193,7 +196,7 @@
     }
 
     a {
-        font-size: var(--font-size-1);
+        font-size: var(--font-size-0);
         font-weight: 400;
         text-decoration: none;
         color: var(--color-text-gray);
@@ -215,7 +218,7 @@
     display: flex;
     flex-direction: column;
     // gap: 0.7rem 1rem;
-    gap: 1rem;
+    gap: .5rem;
     padding: 1rem 0;
 
     li {
@@ -223,7 +226,7 @@
     }
 
     a {
-        font-size: var(--font-size-1);
+        font-size: var(--font-size-0);
         font-weight: 400;
         text-decoration: none;
         color: var(--color-text-gray);
