--- a/components/post-card/post-card__big/post-card__big.scss
+++ b/components/post-card/post-card__big/post-card__big.scss
@@ -11,7 +11,12 @@
 
 
     // border-top: 1px solid var(--color-gray-dark);
+    border: 1px solid #212121;
+    border-radius: 1rem;
     overflow: visible;
+    overflow: hidden;
+
+    // padding: 1rem;
 }
 
 
@@ -32,6 +37,7 @@
     height: fit-content;
     height: 100%;
     // border-radius: 1rem;
+    padding: 1.5rem 1.5rem 1.5rem 0;
 }
 
 .post-card__big__content {
@@ -53,7 +59,7 @@
 }
 
 .post-card__big__heading {
-    font-weight: 400;
+    font-weight: 500;
     font-size: var(--font-size-1);
     line-height: var(--font-size-1);
     z-index: 10;
@@ -64,9 +70,14 @@
 }
 
 .post-card__big__short-description {
+    display: -webkit-box;
+    -webkit-line-clamp: 6;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+
     * {
-        color: #999;
         color: var(--color-text-primary);
+        // color: var(--color-text-gray);
     }
 }
 
@@ -85,11 +96,11 @@
     gap: 22px;
 
     border-top: 1px solid var(--color-gray-dark);
-    padding: 13px 0px;
+    padding: 10px 0px;
     width: 100%;
 
     * {
-        font-size: var(--font-size-0);
+        font-size: var(--font-size--1);
     }
 }
 
@@ -149,11 +160,11 @@
 }
 
 .post-card__meta__team__name {
-    font-size: var(--font-size-0);
+    font-size: var(--font-size--1);
     color: var(--color-secondary);
 
     * {
-        font-size: var(--font-size-0);
+        font-size: var(--font-size--1);
         color: var(--color-secondary);
     }
 
@@ -182,9 +193,10 @@
     bottom: 0;
     z-index: 0;
     filter: blur(60px);
-    opacity: .45;
+    opacity: .1;
     overflow: visible;
     width: 100%;
+    width: 210%;
     height: 100%;
     padding: 0 var(--padding) 0 0;
     top: 50%;
@@ -193,6 +205,7 @@
     left: 50%;
     // transform: scale(1.2) translate(-50%, -50%);
     transform: translate(-50%, -50%);
+    // mask: linear-gradient(260deg, rgba(0, 0, 0, 0) 10.41138795045045%, rgba(0, 0, 0, 1) 93.1447072072072%) add;
 
     &* {
         pointer-events: none;
@@ -207,17 +220,30 @@
 }
 
 .post-card__big__gallery {
-    padding: 0 var(--padding) 0 0;
+    // padding: 0 var(--padding) 0 0;
+    padding: 0;
 
     position: relative;
     width: 100%;
     height: 100%;
     grid-column: 1 / 9;
     z-index: 5;
+    // &::after{
+    //     content: '';
+    //     position: absolute;
+    //     right: 0;
+    //     top: 0;
+    //     height: 100%;
+    //     width: 30%;
+    //     // background: ;
+    //     background: linear-gradient(270deg, #000 0%, rgba(0, 0, 0, 0) 100%);
+    // }
 
     .f-carousel {
         // border-radius: 1rem;
         overflow: hidden;
+        border-radius: 1rem;
+
     }
 
     .f-carousel.has-dots {
